; ModuleID = '/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitLir.c_sljit_verbose_freg.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitLir.c_sljit_verbose_freg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sljit_compiler = type { i64, i32 }

@SLJIT_FR0 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"fr%d\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"fs%d\00", align 1
@SLJIT_NUMBER_OF_FLOAT_REGISTERS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sljit_compiler*, i64)* @sljit_verbose_freg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sljit_verbose_freg(%struct.sljit_compiler* %0, i64 %1) #0 {
  %3 = alloca %struct.sljit_compiler*, align 8
  %4 = alloca i64, align 8
  store %struct.sljit_compiler* %0, %struct.sljit_compiler** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @SLJIT_FR0, align 8
  %7 = load %struct.sljit_compiler*, %struct.sljit_compiler** %3, align 8
  %8 = getelementptr inbounds %struct.sljit_compiler, %struct.sljit_compiler* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = add nsw i64 %6, %9
  %11 = icmp slt i64 %5, %10
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = load %struct.sljit_compiler*, %struct.sljit_compiler** %3, align 8
  %14 = getelementptr inbounds %struct.sljit_compiler, %struct.sljit_compiler* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @SLJIT_FR0, align 8
  %18 = sub nsw i64 %16, %17
  %19 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %18)
  br label %28

20:                                               ; preds = %2
  %21 = load %struct.sljit_compiler*, %struct.sljit_compiler** %3, align 8
  %22 = getelementptr inbounds %struct.sljit_compiler, %struct.sljit_compiler* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load i64, i64* @SLJIT_NUMBER_OF_FLOAT_REGISTERS, align 8
  %25 = load i64, i64* %4, align 8
  %26 = sub nsw i64 %24, %25
  %27 = call i32 @fprintf(i32 %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i64 %26)
  br label %28

28:                                               ; preds = %20, %12
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
